# multi-region-dashboard-live-demo

./: .env  .env.example  .gitignore  AGENTS.md  ALPINEJS_ANALYSIS.md  CHATBOT_GUARDED_ROLLOUT.md  CLAUDE.md  DOCKER_SETUP.md  Dockerfile  GEMINI.md  Multi-Region PostgreSQL Testing Dashboard.docx  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  docker-start.sh  justfile  populate_locations.py  presentation.md  pyproject.toml  requirements.txt  setup_database.py  test_db.py  test_db_manager.py
.beads/: issues.jsonl
.db_connections/: .key  connections.json
alembic/: env.py
alembic/versions/: 001_create_database_connections_table.py  002_enable_postgresql_extensions.py
app/: __init__.py  chat.py  config.py  database.py  db_manager.py  db_manager_postgres.py  feature_flags.py  location_service.py  main.py  queries.py  region_mapping.py
app/routers/: __init__.py  api.py  db_management.py  db_management_postgres.py  pages.py
app/templates/: base.html  index.html
app/templates/partials/: all_regions_result.html  alpine_map_demo.html  check_history.html  connection_details.html  connection_form.html  connection_result.html  database_connections.html  database_testing_dashboard.html  error.html  health_result.html  latency_result.html  load_test_result.html  map_view.html  metrics_charts.html  recent_checks.html  recent_checks_table_body.html  regions_summary.html
migrations/: 002_create_database_connections_table.sql  003_enable_postgresql_extensions.sql
